Attempt to fix scrollbars on MS Edge

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,7 @@ box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
 transition:all .2s ease;
 background-color:#bdc0ff;
 overflow-x:scroll;
+-ms-overflow-style: none;
 white-space:nowrap;
 border:none;
 outline:none;
